--- a/featured.html
+++ b/featured.html
@@ -4,29 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Featured treats</title>
-    <style>
-        body {
-            background-color: bisque;
-            font-family: 'Courier New', Courier, monospace;
-        }
-        h2, h4 {
-            text-align: center;
-            font-family: 'Courier';
-        }
-        h4 {
-            border: 3px solid black;
-            background-color: palevioletred;
-            padding: 10px;
-        }
-        a {
-            text-decoration: none;
-            color: black;
-        }
-        img {
-            border-radius: 10px;
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styless.css">
 </head>
 <body>
     <h2 style="text-align: center; font-family: 'Courier';"><u><b>Featured Treats</b></u></h2>
