--- a/order.html
+++ b/order.html
@@ -4,49 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Now</title>
-    <style>
-        body {
-            background-color: bisque;
-            font-family: 'Courier New', Courier, monospace;
-        }
-        .container {
-            width: 50%;
-            margin: auto;
-            padding: 20px;
-            border: 3px solid black;
-            border-radius: 14px;
-            background-color: rgb(237, 149, 237);
-        }
-        h2 {
-            text-align: center;
-            font-family: 'Courier';
-        }
-        label {
-            display: block;
-            margin-bottom: 10px;
-        }
-        input[type="text"],
-        input[type="email"],
-        select {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border-radius: 16px;
-            border: 1px solid #ccc;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: palevioletred;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: darkred;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylo.css">
 </head>
 <body>
     <form action="confirmation.html" method="post">
