--- a/index.html
+++ b/index.html
@@ -4,27 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telugu Treats HomePage</title>
-    <style>
-        body{
-            background-color: antiquewhite;
-        }
-        div.scrollmenu {
-            overflow: auto;
-            white-space: nowrap;
-            background-color: #333;
-        }
-        div.scrollmenu a {
-            display: inline-block;
-            color: white;
-            text-align: center;
-            padding: 14px;
-            text-decoration: none;
-            font-family: 'Courier New', Courier, monospace;
-        }
-        div.scrollmenu a:hover {
-            background-color: #777;
-        }
-    </style>
+    <link rel="stylesheet" href="stylee.css">
 </head>
 <body>
     <div class="scrollmenu">
